--- a/test/src/test/java/uks/debuggen/studyright/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/studyright/classModel.yaml
@@ -66,29 +66,10 @@ pre.shouldHave(text(\"- 12_00:\"));
 open(\"http://localhost:42400\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_00:\"));
-// check data note 12:00:01
+// check data note s01
 pre = $(\"#data\");
-pre.shouldHave(text(\"- StudyRight:\"));
-// check data note 12:01
-pre = $(\"#data\");
-pre.shouldHave(text(\"- math:\"));
-pre.shouldHave(text(\"credits: 23\"));
-pre.shouldHave(text(\"uni: StudyRight\"));
-pre.shouldHave(text(\"doors: modeling algebra\"));
-// check data note 12:02
-pre = $(\"#data\");
-pre.shouldHave(text(\"- modeling:\"));
-pre.shouldHave(text(\"credits: 42\"));
-pre.shouldHave(text(\"doors: math algebra exam\"));
-// check data note 12:03
-pre = $(\"#data\");
-pre.shouldHave(text(\"- algebra:\"));
-pre.shouldHave(text(\"credits: 12\"));
-// check data note 12:04
-pre = $(\"#data\");
-pre.shouldHave(text(\"- exam:\"));
-pre.shouldHave(text(\"credits: 0\"));
-pre.shouldHave(text(\"uni: StudyRight\"));
+pre.shouldHave(text(\"- s01:\"));
+pre.shouldHave(text(\"motivation: 77\"));
 
 System.out.println();
 "
